Actions
Bug #10013
closedbootadm: list_menu_entry() is missing else
Start date:
2018-11-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Somehow the else is lost from chained if statements.
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9dded1d9015db0b91278731dfec380891ea0eb14
commit 9dded1d9015db0b91278731dfec380891ea0eb14 Author: Toomas Soome <tsoome@me.com> Date: 2018-12-03T21:50:58.000Z 10013 bootadm: list_menu_entry() is missing else Reviewed by: Andy Fiddaman <omnios@citrus-it.net> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Joshua M. Clulow <josh@sysmgr.org>
Actions