10013 bootadm: list_menu_entry() is missing else Reviewed by: Andy Fiddaman <omnios@citrus-it.net> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Joshua M. Clulow <josh@sysmgr.org>